; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/sqlite3/extr_sqlite3.c_et_getdigit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/sqlite3/extr_sqlite3.c_et_getdigit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (double*, i32*)* @et_getdigit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @et_getdigit(double* %0, i32* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca double*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  store double* %0, double** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* %8, align 4
  %10 = icmp sle i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i8 48, i8* %3, align 1
  br label %31

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* %13, align 4
  %16 = load double*, double** %4, align 8
  %17 = load double, double* %16, align 8
  %18 = fptosi double %17 to i32
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = sitofp i32 %19 to double
  store double %20, double* %7, align 8
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, 48
  store i32 %22, i32* %6, align 4
  %23 = load double*, double** %4, align 8
  %24 = load double, double* %23, align 8
  %25 = load double, double* %7, align 8
  %26 = fsub double %24, %25
  %27 = fmul double %26, 1.000000e+01
  %28 = load double*, double** %4, align 8
  store double %27, double* %28, align 8
  %29 = load i32, i32* %6, align 4
  %30 = trunc i32 %29 to i8
  store i8 %30, i8* %3, align 1
  br label %31

31:                                               ; preds = %12, %11
  %32 = load i8, i8* %3, align 1
  ret i8 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
